cambio package nome

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "wep-app",
-  "private": true,
-  "version": "1.0.0",
+  "name": "read-mine",
+  "displayName": "ReadMine",
+  "version": "0.1.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
